Dark Mode issure navbar is resolved

--- a/src/index.css
+++ b/src/index.css
@@ -216,10 +216,10 @@ code {
   height: 100%;
 }
 
-.requisite-from {
-  /* width: 50%; */
+/* .requisite-from {
+  width: 50%;
 
-}
+} */
 
 .topics-div {
   height: 6rem;
